packaging: move most of contrib/docker to contrib/packaging/docker
contrib/ is kind of a dumping ground for all kinds of random things.

Many of the files in contrib/ are related to packaging. But sorting
out how everything is related is a lot of effort since it is all
mixed together.

This commit starts the process of refactoring everything related
to packaging so it all lives under one roof.

Most content from contrib/docker is simply moved to
contrib/packaging/docker and all references are updated.

Differential Revision: https://phab.mercurial-scm.org/D3541

--- a/.hgignore
+++ b/.hgignore
@@ -31,8 +31,8 @@ build
 contrib/chg/chg
 contrib/hgsh/hgsh
 contrib/vagrant/.vagrant
-contrib/docker/debian-*
-contrib/docker/ubuntu-*
+contrib/packaging/docker/debian-*
+contrib/packaging/docker/ubuntu-*
 dist
 packages
 doc/common.txt
