fuzz: compile xdiff.cc with -std=c++17
Otherwise the build would fail as follows:

  In file included from xdiff.cc:13:
  ./fuzzutil.h:23:10: fatal error: 'third_party/absl/types/optional.h' file not
  found
  #include "third_party/absl/types/optional.h"

--- a/contrib/fuzz/Makefile
+++ b/contrib/fuzz/Makefile
@@ -34,6 +34,7 @@ x%.o: ../../mercurial/thirdparty/xdiff/x%.c ../../mercurial/thirdparty/xdiff/*.h
 	  -o $@ \
 	  $<
 
+xdiff: CXXFLAGS += -std=c++17
 xdiff: xdiff.cc xdiffi.o xprepare.o xutils.o fuzzutil.o
 	$(CXX) $(CXXFLAGS) -DHG_FUZZER_INCLUDE_MAIN=1 -g -O1 -fsanitize=fuzzer-no-link,address \
 	  -I../../mercurial xdiff.cc \
