--- a/rust/chg/Cargo.toml
+++ b/rust/chg/Cargo.toml
@@ -9,10 +9,12 @@ license = "GPL-2.0+"
 bytes = "0.4"
 futures = "0.1"
 libc = "0.2"
+log = { version = "0.4", features = ["std"] }
 tokio = "0.1"
 tokio-hglib = "0.2"
 # TODO: "^0.2.3" once released. we need AsRawFd support.
 tokio-process = { git = "https://github.com/alexcrichton/tokio-process" }
+tokio-timer = "0.2"
 
 [build-dependencies]
 cc = "1.0"
